# finite_state_machine

./: .gitignore  README.md  pyproject.toml
finite_state_machine/: __init__.py  finite_state_machine.py  mod_three_fsm.py
tests/: test_finite_state_machine.py  test_mod_three_fsm.py
